Replace restaurant name in index.html

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 역사 탐방과 식도락을 한 번에 즐기기에 적합합니다.
               </li>
               <li data-i18n="independence-food-2">
-                <strong>Happy Sushi Restaurant</strong> – 인근에서 비교적 깔끔한 분위기로 식사를 할 수 있는 스시·일식 레스토랑입니다.
+                <strong>닭 삼백집</strong> – 닭 한 마리와 칼국수, 죽으로 이어지는 코스로 든든하게 식사하기 좋은 닭요리 전문점.
               </li>
               <li data-i18n="independence-food-3">
                 <strong>주변 분식·한식당</strong> – 주차장 주변에 간단한 한 끼 식사를 제공하는 소규모 식당들이 위치해 있습니다.
