--- a/index.html
+++ b/index.html
@@ -136,14 +136,29 @@
           <div class="place-info-group">
             <h3 data-i18n="label-food">🍽️ 근처 맛집</h3>
             <ul>
-              <li data-i18n="terminal-food-1">
-                <strong>양포항 천안 신부동점</strong> – 터미널·백화점 근처에서 회를 즐기고자 할 때 많이 찾는 해산물 전문 식당입니다.
+              <li data-i18n="terminal-food-1" class="map-choice-item">
+                <a href="#" class="map-name" data-map-query="양포항 천안 신부동점"><strong>양포항 천안 신부동점</strong></a>
+                <span class="map-choice">
+                  <a href="#" class="map-btn naver" data-map-provider="naver" data-map-query="양포항 천안 신부동점">네이버</a>
+                  <a href="#" class="map-btn kakao" data-map-provider="kakao" data-map-query="양포항 천안 신부동점">카카오</a>
+                </span>
+                – 터미널·백화점 근처에서 회를 즐기고자 할 때 많이 찾는 해산물 전문 식당입니다.
               </li>
-              <li data-i18n="terminal-food-2">
-                <strong>마운트 피쉬테일</strong> – 인도·네팔식 커리와 탄두리 요리를 제공하는 이색적인 레스토랑입니다.
+              <li data-i18n="terminal-food-2" class="map-choice-item">
+                <a href="#" class="map-name" data-map-query="마운트 피쉬테일 천안"><strong>마운트 피쉬테일</strong></a>
+                <span class="map-choice">
+                  <a href="#" class="map-btn naver" data-map-provider="naver" data-map-query="마운트 피쉬테일 천안">네이버</a>
+                  <a href="#" class="map-btn kakao" data-map-provider="kakao" data-map-query="마운트 피쉬테일 천안">카카오</a>
+                </span>
+                – 인도·네팔식 커리와 탄두리 요리를 제공하는 이색적인 레스토랑입니다.
               </li>
-              <li data-i18n="terminal-food-3">
-                <strong>리틀그리스(Little Greece)</strong> – 샐러드와 그리스 요리에 특화된, 분위기 있는 저녁 식사 장소입니다.
+              <li data-i18n="terminal-food-3" class="map-choice-item">
+                <a href="#" class="map-name" data-map-query="리틀그리스 천안"><strong>리틀그리스(Little Greece)</strong></a>
+                <span class="map-choice">
+                  <a href="#" class="map-btn naver" data-map-provider="naver" data-map-query="리틀그리스 천안">네이버</a>
+                  <a href="#" class="map-btn kakao" data-map-provider="kakao" data-map-query="리틀그리스 천안">카카오</a>
+                </span>
+                – 샐러드와 그리스 요리에 특화된, 분위기 있는 저녁 식사 장소입니다.
               </li>
             </ul>
           </div>
@@ -200,14 +215,29 @@
           <div class="place-info-group">
             <h3 data-i18n="label-food">🍽️ 근처 맛집</h3>
             <ul>
-              <li data-i18n="samgori-food-1">
-                <strong>삼거리휴게소 일대 식당</strong> – 국밥, 정식, 분식 등 드라이브 코스와 함께 방문하기 좋은 식당들이 모여 있습니다.
+              <li data-i18n="samgori-food-1" class="map-choice-item">
+                <a href="#" class="map-name" data-map-query="천안 삼거리휴게소 식당"><strong>삼거리휴게소 일대 식당</strong></a>
+                <span class="map-choice">
+                  <a href="#" class="map-btn naver" data-map-provider="naver" data-map-query="천안 삼거리휴게소 식당">네이버</a>
+                  <a href="#" class="map-btn kakao" data-map-provider="kakao" data-map-query="천안 삼거리휴게소 식당">카카오</a>
+                </span>
+                – 국밥, 정식, 분식 등 드라이브 코스와 함께 방문하기 좋은 식당들이 모여 있습니다.
               </li>
-              <li data-i18n="samgori-food-2">
-                <strong>샐러드데이즈 삼거리휴게소점</strong> – 가벼운 식사를 원하는 이용자를 대상으로 하는 샐러드 전문점입니다.
+              <li data-i18n="samgori-food-2" class="map-choice-item">
+                <a href="#" class="map-name" data-map-query="샐러드데이즈 삼거리휴게소점"><strong>샐러드데이즈 삼거리휴게소점</strong></a>
+                <span class="map-choice">
+                  <a href="#" class="map-btn naver" data-map-provider="naver" data-map-query="샐러드데이즈 삼거리휴게소점">네이버</a>
+                  <a href="#" class="map-btn kakao" data-map-provider="kakao" data-map-query="샐러드데이즈 삼거리휴게소점">카카오</a>
+                </span>
+                – 가벼운 식사를 원하는 이용자를 대상으로 하는 샐러드 전문점입니다.
               </li>
-              <li data-i18n="samgori-food-3">
-                <strong>근처 로컬 한식당들</strong> – 공원 외곽 도로를 따라 소규모 한식당이 분포해 있어, 산책 후 간단히 식사하기에 좋습니다.
+              <li data-i18n="samgori-food-3" class="map-choice-item">
+                <a href="#" class="map-name" data-map-query="천안 삼거리공원 근처 한식"><strong>근처 로컬 한식당들</strong></a>
+                <span class="map-choice">
+                  <a href="#" class="map-btn naver" data-map-provider="naver" data-map-query="천안 삼거리공원 근처 한식">네이버</a>
+                  <a href="#" class="map-btn kakao" data-map-provider="kakao" data-map-query="천안 삼거리공원 근처 한식">카카오</a>
+                </span>
+                – 공원 외곽 도로를 따라 소규모 한식당이 분포해 있어, 산책 후 간단히 식사하기에 좋습니다.
               </li>
             </ul>
           </div>
@@ -263,15 +293,30 @@
           <div class="place-info-group">
             <h3 data-i18n="label-food">🍽️ 근처 맛집</h3>
             <ul>
-              <li data-i18n="independence-food-1">
-                <strong>병천 순대골목</strong> – 독립기념관에서 차량으로 약 10분 이동하면 아우내장터·병천순대 거리로 이어져,
+              <li data-i18n="independence-food-1" class="map-choice-item">
+                <a href="#" class="map-name" data-map-query="병천 순대골목"><strong>병천 순대골목</strong></a>
+                <span class="map-choice">
+                  <a href="#" class="map-btn naver" data-map-provider="naver" data-map-query="병천 순대골목">네이버</a>
+                  <a href="#" class="map-btn kakao" data-map-provider="kakao" data-map-query="병천 순대골목">카카오</a>
+                </span>
+                – 독립기념관에서 차량으로 약 10분 이동하면 아우내장터·병천순대 거리로 이어져,
                 역사 탐방과 식도락을 한 번에 즐기기에 적합합니다.
               </li>
-              <li data-i18n="independence-food-2">
-                <strong>닭 삼백집</strong> – 닭 한 마리와 칼국수, 죽으로 이어지는 코스로 든든하게 식사하기 좋은 닭요리 전문점.
+              <li data-i18n="independence-food-2" class="map-choice-item">
+                <a href="#" class="map-name" data-map-query="닭 삼백집"><strong>닭 삼백집</strong></a>
+                <span class="map-choice">
+                  <a href="#" class="map-btn naver" data-map-provider="naver" data-map-query="닭 삼백집">네이버</a>
+                  <a href="#" class="map-btn kakao" data-map-provider="kakao" data-map-query="닭 삼백집">카카오</a>
+                </span>
+                – 닭 한 마리와 칼국수, 죽으로 이어지는 코스로 든든하게 식사하기 좋은 닭요리 전문점.
               </li>
-              <li data-i18n="independence-food-3">
-                <strong>주변 분식·한식당</strong> – 주차장 주변에 간단한 한 끼 식사를 제공하는 소규모 식당들이 위치해 있습니다.
+              <li data-i18n="independence-food-3" class="map-choice-item">
+                <a href="#" class="map-name" data-map-query="독립기념관 근처 분식 한식"><strong>주변 분식·한식당</strong></a>
+                <span class="map-choice">
+                  <a href="#" class="map-btn naver" data-map-provider="naver" data-map-query="독립기념관 근처 분식 한식">네이버</a>
+                  <a href="#" class="map-btn kakao" data-map-provider="kakao" data-map-query="독립기념관 근처 분식 한식">카카오</a>
+                </span>
+                – 주차장 주변에 간단한 한 끼 식사를 제공하는 소규모 식당들이 위치해 있습니다.
               </li>
             </ul>
           </div>
@@ -328,16 +373,31 @@
           <div class="place-info-group">
             <h3 data-i18n="label-food">🍽️ 근처 맛집</h3>
             <ul>
-              <li data-i18n="aunae-food-1">
-                <strong>박순자 아우내순대</strong> – 전국적으로도 알려진 병천순대 전문점으로,
+              <li data-i18n="aunae-food-1" class="map-choice-item">
+                <a href="#" class="map-name" data-map-query="박순자 아우내순대"><strong>박순자 아우내순대</strong></a>
+                <span class="map-choice">
+                  <a href="#" class="map-btn naver" data-map-provider="naver" data-map-query="박순자 아우내순대">네이버</a>
+                  <a href="#" class="map-btn kakao" data-map-provider="kakao" data-map-query="박순자 아우내순대">카카오</a>
+                </span>
+                – 전국적으로도 알려진 병천순대 전문점으로,
                 순대국과 모둠순대를 함께 맛볼 수 있습니다.
               </li>
-              <li data-i18n="aunae-food-2">
-                <strong>충남집</strong> – 오랜 역사를 지닌 순대 전문 노포로,
+              <li data-i18n="aunae-food-2" class="map-choice-item">
+                <a href="#" class="map-name" data-map-query="충남집 병천"><strong>충남집</strong></a>
+                <span class="map-choice">
+                  <a href="#" class="map-btn naver" data-map-provider="naver" data-map-query="충남집 병천">네이버</a>
+                  <a href="#" class="map-btn kakao" data-map-provider="kakao" data-map-query="충남집 병천">카카오</a>
+                </span>
+                – 오랜 역사를 지닌 순대 전문 노포로,
                 정갈한 한 끼를 제공하는 식당입니다.
               </li>
-              <li data-i18n="aunae-food-3">
-                <strong>기타 순대 골목 식당들</strong> – 골목 전체가 순대 전문점으로 이루어져 있어
+              <li data-i18n="aunae-food-3" class="map-choice-item">
+                <a href="#" class="map-name" data-map-query="병천 순대골목"><strong>기타 순대 골목 식당들</strong></a>
+                <span class="map-choice">
+                  <a href="#" class="map-btn naver" data-map-provider="naver" data-map-query="병천 순대골목">네이버</a>
+                  <a href="#" class="map-btn kakao" data-map-provider="kakao" data-map-query="병천 순대골목">카카오</a>
+                </span>
+                – 골목 전체가 순대 전문점으로 이루어져 있어
                 여러 가게 중에서 선택해 보는 즐거움이 있습니다.
               </li>
             </ul>
