--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             프로젝트에서 다루는 네 장소의 상대적인 위치를
             3D 스타일의 지도 위에 표시합니다.
           </p>
+          <div class="hero-map-hint-chip" aria-hidden="true" data-i18n="hero-map-hint">🖱️ 핀을 클릭하면 해당 장소로 이동해요</div>
           <div class="hero-map">
             <img src="images/cheonan-map-main.png" alt="천안 전체 지도" />
             <button class="hero-pin pin-terminal" data-target="#terminal">
